--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,25 +1,23 @@
 ---
-title: 2022年5月后国内的民生会艰难到什么地步
+title: 秘翻在线：什么样的诱惑，能使她的父母做出了如此愚蠢的选择？
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968118/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968229/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2022年5月后国内的民生会艰难到什么地步-.jpg)
-这是很让人痛心的事情，咱们谈论这些美好的时候我一想到明年5月份或者世界，就觉得这是多么的黑暗。我最近干的事儿都是准备这个黑暗时期的到来，很多事情都跟这个有关系。那么国内呢？就是世界上最黑暗的时候，就像今天我们在直播当中，七哥吃着一盆菜的时候，阿富汗的人民被饿死，2300万人到2500万人没粮食吃，从一个处女四袋面现在是4个处女一袋粮食啊！这灾难就是此刻在直播的时候，我负法律责任的，我说的对不对？世界很冷漠，我们真没办法。我这几天尝试，我说我们法治基金拿出1000万美元来买点粮食发过去，他说关键是你怎么送过去呀？再一个粮食过去以后能到穷人手里吗？一系列的问题。
+撰稿：待命（文暁）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-11.png)（图片源自本文链接）
+2月7日时事通信社消息：据法新社报道，一名参加北京冬奥会花样滑冰团体赛的中国籍选手在表演中摔倒后在社交媒体上受到严厉批评。据信中共国正在审查有关该运动员的帖子。
 
-如果对台湾开战，台湾和大陆那就不是死一两个人的事，这时候就显示出咱们新中国联邦的重要。我们要布置一切，绝对不能让大牛、巴黎、天机、郑清、一叶菩提他们这些人在台湾被CCP给收拾了，不可以被饿死，那是不可能发生的事儿，我们绝不允许。
+在美国出生和长大的Beverly Zhu，现中共国公民朱易，看似很紧张的出现在团体赛的女子单人滑赛场，没有发挥出预想的水平。等待发表分数时的她似乎在强忍泪水。
 
-那大陆明年是什么情况？这真的是救不了，我家人我也救不了，疫苗灾难的死亡和缺粮食。大家记住，你看咱现在都在减肥，让你3天不吃，饿的你就啥都吃，还什么喜不喜欢、干不干净？没那一说。国内基本上能回到一个现代的大跃进的时代！
+在中共国版推特之微博上，一篇带有 “朱易摔倒 “标签的帖子被浏览了2.3亿次，但该标签后来被封，6日下午，这个帖子不再出现在搜索结果中。而另一个带有 “朱易失败 “标签的帖子仍然有效，浏览量超过8000万次。
 
-*发布：开智则立*
+于2018年更改了国籍的朱易说：因为第一跳没成功而心力交瘁，在最后一跳的落地时感到压力很大，不幸的是我失败了。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+然而，互联网上少见对朱易的同情，有些人还对队员的选拔提出了质疑。有个人说：“陈虹伊要好得多，我不明白为什么像她这样的人会被选入中国队”。 “另一个人补充说：”压力太大。想知道，有没有一个球员可以在不感受到国家和人民的压力的情况下参加奥运会？”。
+
+翻译这篇报道，使我想起了郭先生的话：跟着共产党，走进火葬场。出生于２００２年的朱易，２０１８年的时候１６岁，还不是个成年人。她的父母把她生在了自由国家，又亲手把她送回了反人类国家。是什么样的诱惑，能使她的父母做出了如此愚蠢的选择？所以，朱易的压力，既可怜又可恨！
+
+信息源：[フィギュア団体で転倒、中国籍取得の選手にSNSで批判殺到（ＡＦＰ＝時事） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/b3efbbd26e9d5bc42d8f3f70a6e98eab57df8662)
 
  
 
