--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,50 +1,26 @@
 ---
-title: 单伟健在杨贝贝虚假采访背后的金融运作
+title: 七哥谈中共和哈萨克斯坦（二）
 ---
-`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1968053/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968166/)
 
-加拿大温哥华扬帆农场：薇文viven
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-3-edited.jpg)图片来源：weibo
+哈萨克斯坦，这个整个纳扎尔巴耶夫你看看他全家几乎都是什么油、气、通信，你但凡去过那个国家，你感觉这个国家就是他一家人的，不但是石油。能源、矿业，他都弄着啊，就连那个首都的夜总会，你一查都是女婿的，什么侄子的全都是。
 
+我喝完酒以后，晚上到他们夜总会去，他们的夜总会是在楼上，不像中国人夜总会在楼下。中国人有个习惯思维，所以就在地下。移到地上，就是很高级了，警察保护了他们，说在最顶楼，中间这转盘，那个真的是就像青青草原的脸，那个美女漂亮啊，咔咔跳，舞花一进去以后，他们在一个转的台子上跳啊，各种舞蹈，那个音乐，进去以后你情不自禁的就开始跟着晃起来了，然后这边就人家就端着来了，他们好厉害呢夜总会啊，比七哥那个裕达俱乐部厉害，比盘古还厉害，人家那跨过来又端着盘子，你都不知道，就一个盘子上就放了10个杯子或者7个杯子，但你拿那个杯子的旧跟别人的杯子绝对不一样，它就会那么巧妙，都是那种黑珍珠，300年的黑珍珠。我在喝的香槟，都是超级酒就给你上来了。你说他有多腐败这个国家啊，那一顿晚饭下去啊，都是上百万美元。
 
-前段时间HBO Vice 散播种族歧视和恶意诋毁爆料革命和郭文贵先生的视频，背后有中共巨资借用“腾讯音乐娱乐”(TME)操作平台，利用海外金融投资公司“太盟集团”(PAG)  和“德太资本”(TPG)，通过中共特务单伟建和王岐山家族的孙强两人处心积虑运作的结果。
+然后，这总统的家人，就是在场的时候，都是警察，他们叫做桂军，就是特种秘密部队的人，就在旁边护着我们，而且好多也是女的。而且给我讲海南话，讲郭先生您好，然后讲呀我们每年都到海南去度假啊。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（二）-.jpg)
+2022年1月7日文贵大直播
 
-单伟建的太盟在2017年持股9.8%成为 TME的第二大股东；2018年 腾讯音乐在美国上市，太盟靠出售美国存托凭证募资$5,700 万美元，并继续持股 9% ；
-
-华纳公司旗下的HBO2013年与腾讯签约入驻中国，2018年因主持人嘲讽习近平为“维尼熊”后，一直被中共封杀，失去每年近50%增长的华纳损失惨重。
-
-单伟建出手使用金融手段控制华纳： TME投资 “华纳音乐”的股权2%、双方成立合资公司、允许华纳音乐向TME的经营者授权，华纳公司和华纳音乐的股价双双开始飙升。
-
-孙强运作的德太资本2017年就已投资 HBOVice 达$4.5亿，2019年，有中金资本的平台撑腰，又注资$4500万美元，助HBOVice上市，但至今未成功。
-
-中共蓄谋已久，花费高昂代价，吃准华纳和HBO逐利的贪婪本性，用单伟建和孙强两路夹击，犁庭扫穴，使之成为中共作恶的工具和替罪羊。中共因惧怕新中国联邦而导致的又一愚蠢行径，不断为全球灭共逆增上缘。
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/f.jpg)图片来源：GNEWS
-
-
-参考资料：
-
-[Tencent Music Entertainment: China’s Largest Online Music Entertainment Platform Operator](https://seekingalpha.com/article/4412340-tencent-music-entertainment-online-music-entertainment-platform-operator)
-
-[HBO Website Is Down in China After John Oliver Skewers Xi Jinping on Last Week Tonight](https://time.com/5321945/hbo-china-john-oliver-xi-jinping/)
-
-[Private Capital-backed Tencent Music Raises US$1.1 Billion in Initial Public Offering (Asia)](https://www.globalprivatecapital.org/newsroom/private-capital-backed-tencent-music-raises-us1-1-billion-in-initial-public-offering-asia/)
-
-[SEC FORM F-1 Tencent Music Entertainment Group 2018.10](https://www.sec.gov/Archives/edgar/data/1744676/000119312518290581/d624633df1.htm)
-
-[Warner Music Partners With Tencent on Joint Venture Record Label in China](https://www.hollywoodreporter.com/news/music-news/warner-music-partners-with-tencent-on-joint-venture-record-label-in-china-4154621/)
-
-[腾讯音乐娱乐集团(TME)公司深度报告](http://pdf.dfcfw.com/pdf/H3_AP201901281289167588_1.pdf)
-
-[TPG与中金资本成立 “中国协同效应”平台](https://www.financialnews.com.cn/zq/pevc/201901/t20190110_152759.html)
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/e-edited.jpg)图片来源：sjmrw
-
-
-* * *
-
-编辑发稿：硫酸羟氯喹64
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
