--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,25 +1,23 @@
 ---
-title: 俄罗斯入侵将在几天内造成5万名乌克兰人伤亡
+title: 俄罗斯感染中共病毒的记录创历史新高
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968048/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968152/)
 
-#### 撰稿：彩虹       
+#### 撰稿：彩虹       
 
 #### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-613.png)图片来源：波士顿先驱报
-2月6日，《新闻极限》报道，虽然拜登政府在其关于俄罗斯可能入侵乌克兰的信息传递中放弃了“迫在眉睫”一词，但国会国防部的一份简报告诉国会议员们，俄罗斯可以在72小时内拿下基辅（Kyiv），全面入侵将造成多达5万名乌克兰人伤亡。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-615.png)图片来源：ABC News
+2月6日，《国会山报》引述《美联社》报道，周日，俄罗斯新增中共病毒（COVID-19）病例创下历史纪录，达到189,071个，比周六的感染病例增加了2800例，比一个月前报告的感染数量增加了10倍。
 
-消息人士告诉《福克斯新闻》记者雅克·海因里希（Jacqui Heinrich），参谋长联席会议主席马克·米利（Mark Milley）将军上周告诉众议院和参议院的简报会，乌克兰首都基辅可能在72小时内被（俄军）攻下，代价是4000名俄罗斯军人和15000名乌克兰军人付出生命。
+然而，尽管病例数上升，俄罗斯因感染中共病毒的死亡人数略有下降。周日有661人死亡，而1月初报告的死亡人数为796人。然而，俄罗斯确实是欧洲因感染中共病毒死亡人数最多的国家，整个中共病毒疫情期间报告的死亡人数超过335,400人，其COVID-19（中共病毒）工作组还报告了1,280万例病毒感染者。
 
-在另一份预测（俄军）大规模入侵和5万人伤亡的报告中，一位欧洲官员告诉《华盛顿邮报》（The Washington Post）说：“我们担心的是，你不会把战斗群在另一个国家的边境上两次（集结）却啥也不做。我认为这正是我真正担心的，（普京）现在把兵力集中在那里，即使他还是什么也不做……广大国际社会会作何感想？”
+随着病例的激增，俄罗斯总统弗拉基米尔·普京（Vladimir Putin）上周表示，当局不打算实行任何封锁或其他COVID-19限制措施。
 
-一位消息人士告诉海因里希，预期乌克兰人将会逃离，美国和欧洲盟友正在为难民和移民危机整合资源。
+根据报道，尽管俄罗斯是世界上最早提供中共病毒（COVID-19）疫苗的国家之一，但只有约一半的人口接种了中共病毒疫苗。
 
-文章说，目前，有10万到13万名俄罗斯军人在乌克兰边境集结，目前已经达到了全面入侵乌克兰所需（兵力）的70%。
+**新闻报道**
 
-**新闻来源**
-
-[Russia Invasion Would Cost 50,000 Ukrainian Casualties Within Days](https://www.newsmax.com/newsfront/invasion-casualties-markmilley-war/2022/02/06/id/1055680/)
+[Russia COVID-19 infections 10 times higher than one month ago](https://thehill.com/policy/international/593037-russia-covid-19-infections-ten-times-higher-than-one-month-ago)
 
  
 
