--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,23 +1,27 @@
 ---
-title: 悉尼一家殡仪馆的工作人员呼吁不要给儿童接种新冠疫苗
+title: 部分感染中共病毒的韩国人将可能无法参与总统选举投票
 ---
-`喜国公民` [轉載自GNews](https://gnews.org/zh-hans/1967977/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968026/)
 
-By：喜国公民
-视频来自网络
-一位在悉尼的一家殡仪馆工作的人士，在一次聚会时接受了采访，披露了自从澳洲政府实施了新冠疫苗强制接种政策后，在她工作的殡仪馆所发生的事情。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-59.png)图片来自网络
-这位女士在接受采访时，身穿一件白色运动衫，上面印着，“殡葬业，我们已经经历过了”。她说，正在发生很多事情，如果人们还没有意识到问题的严重性，婴儿死亡的数量会继续增加。
+#### 撰稿：彩虹 
 
-很多成年人和婴儿正在死去。年轻人由于心脏病发作，中风和血栓而丧命。奇怪的是，在死亡文件上注明的死亡原因是无法确定，这令人无法理解。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-612.png)图片来源：Time
+2月6日，《国家脉动》记者娜塔莉·温特斯（Natalie Winters）发文，报道韩国感染中共病毒（COVID-19）的选民将可能无法在韩国即将举行的总统选举中投票。
 
-很多家人选择不举行殡葬仪式，尸体直接火花。这可能是由于死亡人数太多，殡仪馆的殡葬仪式大排长龙，无法满足死者家属的要求，虽然殡仪馆的工作人员已尽全力地工作。
+文章引述《韩国先驱报》（The Korea Herald）的内容说：“人们对COVID-19（中共病毒）患者是否无法在第20届总统选举中投票的问题越来越关注，因为那些在邮寄选票登记期之后被确认感染病毒的人可能无法在3月9日到投票站报到。”
 
-由于尸体太多，有些殡仪馆正在安装超大的可以容纳20具尸体的冷冻柜。有的殡仪馆订购了8个这样的冷冻柜，来临时储藏多达160具尸体。
+报道说，韩国的国家选举委员会（National Election Commission）有一个为期五天的窗口，接受邮寄选票的申请，在治疗中心居住的中共病毒患者和那些被隔离或自我隔离的人均可以使用。
 
-这位女士奉劝那些还不明真相的民众，看看殡仪馆目前的状况，慎重考虑是否要接种新冠疫苗。她不想看到孩子们被接种新冠疫苗，而给他们带来伤害。但是，从目前的形式来看，不容乐观。她预测，如果人们不醒悟，给儿童接种新冠疫苗一定会发生。
+《韩国先驱报》解释说：“在这段时间内登记的人将能够收到邮寄的选票，并通过向选举当局寄回选票来投票。”
 
-这位女士呼吁，不要给孩子接种新冠疫苗。新冠疫苗给人类带来的是绝对的损害！
+但是，对于那些在国家选举委员会接受邮寄选票申请的窗口期之外感染了中共病毒的个人，就没有任何保障其投票选举的措施。
+
+但是，“有人警告说，到选举时，下个月每天新增的（中共病毒）病例可能超过十万例，这引起了人们的担忧，（这会导致）几十万选民无法在总统选举中投票。”对此，报道说，国家选举委员会正在讨论应对这一潜在危机的措施。
+
+**新闻来源**
+
+[COVID Positive? In South Korea, You Might Be Barred From Voting](https://thenationalpulse.com/2022/02/06/covid-positive-people-may-be-barred-from-voting/)
 
  
 
