--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,52 +1,50 @@
 ---
-title: 加拿大数千人抗议新冠疫苗强制令
+title: 爆料革命五年最大感受灭共容易让中国人心变好难于登天
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968215/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968295/)
 
-翻译&评论：金生水
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-29.png)图片来自网络
-《路透社》近日报道，在本周六（2月5日）数千人在包括金融中心多伦多在内的加拿大各城市游行，这是从首都渥太华蔓延开来的反对新冠疫苗强制的游行，大多数时候是和平的，但也不乏喧嚣时刻。
+G-TV视频链接：[https://gtv.org/video/id=62007b1d585ecc15d73e584f](https://gtv.org/video/id=62007b1d585ecc15d73e584f)
 
-“自由车队”最初是反对加拿大对跨境卡车司机的新冠疫苗要求的运动，但已变成反对公共卫生措施和总理贾斯汀特鲁多政府的集结点。
+**郭文贵先生：**你说这五年，你往回看这感受，你见过咱爆料革命从第一天到今天除了咱们这些战友之外，有几个中国人认为海航是邪恶的？王岐山是邪恶的？孟建柱邪恶？孙力军邪恶？没有人！除了被害者之外！
 
-“我们都厌倦了生活在一个大监狱中的命令、恐吓和生活，”没有透露姓氏的多伦多抗议者罗伯特说。 “我们只想恢复正常，而不必将他们称为新冠疫苗的毒药注射入我们的血管。”
+雅各他家被欺负，他是仇恨当头。如果不是，他不认识这人是邪恶的，在中国，因为他没动我，海航也没海航我，王岐山也没“王”我，孟建柱也没“孟”我，我干嘛恨他？就咱中国人那邻居家能死人、被强奸、被轮奸，绝对视若无物。没有比中国人这心再冷的了。没有比中国人这心再冷的了。
 
-在过去的八天里，抗议者已经关闭了渥太华市中心，一些参与者挥舞着联邦或纳粹旗帜，还有一些人说他们想解散加拿大政府。
+这为啥我们说台湾好？为啥我们说香港好？你到香港去，同类，你就能看到香港人，过去罗湖关，我听到最多的，过去这几十年，每个人都说：哎呀文贵呀，过了这个河，咋就天地不同呢？当年去台湾，一飞几个小时到那转悠回来，后来直通以后到台湾，为啥人家台湾的男的女的都看上去那么顺眼呢？不是别的，是人心！中国人的脑子坏了，中国人的人心坏了。
 
-“渥太华的抗议者已经表达了他们的观点。整个国家都听到了他们的观点，”交通部长奥马尔·阿尔加布拉说，他敦促抗议者“回家并与民选官员接触”。
+所以咱五年的爆料革命，不是共产党最难，真的是中国的人心！就这个授权撤离，都让七哥都不知道咋好了我都。刚才那个罗西讲了他师父的事情，让人感动。他有师父，中国人哪有求师父的？爹妈都不要了，还要什么师父？中国你见什么师父？师父是利用的，学生也是利用的，谁管你什么师父？没大没小、没老没少、没内没外，一切就是利益，就一切！宗教也是这样，一切都是利益！
 
-渥太华警方说对四人提起了仇恨犯罪的起诉，还在和美国联邦调查局联合调查对公共人物的威胁。
+你今天你把我问在这，问到今天五周年，七哥最感慨的事：灭共容易，想让中国人心变好难上加难！比登天、比登太阳系都难！所以说这是灭了共产党，灭一万回共产党，我也不会回中国活着去。我宁可在，真的在美国当狗，美国人明天就是我在大街上当狗去，我吃着狗粮，最起码我知道它没有化学的。
 
-警方称，组织严密的封锁部分依赖于美国同情者的资助，周六抗议者带来了便携式桑拿浴室以对抗寒冷的气温。
+我觉得除了中南坑，中国人没有一个粮食没有化学的。我在这块儿当狗，我也不会回中国去。还搞什么政治，新中国联邦接管，去吧，你爱谁接管谁接管，剩下内战。你八次内战，跟我都没有关系，我只负责把共产党——我肯定把它灭了。这是发自内心的，我就这么直接。
 
-数码媒体显示一男子骑在马背上，扛着特朗普旗。前美国总统特朗普发言支持卡车司机反对“以疯狂的新冠强制规定毁灭加拿大的极左精神病人特鲁多的严厉政策”。
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
 
-GoFundMe 周五关闭了自由车队的捐赠页面，称其因非法活动而违反了平台的服务条款。该集团筹集了约 1010 万加元。
+编辑整理：Jacques；
 
-该网站最初表示，它将为 2 月 19 日之前提出的任何请求退款，并将剩余资金用于经过验证的慈善机构，但周六 GoFundMe 表示将自动退还所有捐款。
+字幕文件制作：大好河山；
 
-特斯拉首席执行官埃隆·马斯克此前曾批评过新冠疫苗强制要求，他称 GoFundMe 为“职业小偷”。 佛罗里达州州长罗恩·德桑蒂斯和其他共和党州议员发誓要调查这家总部位于加州的公司。
+视频制作及上传：Cindy；
 
-警方表示，渥太华约有五千人示威，数百人聚集在加拿大最大城市多伦多和魁北克市，恰逢该市一年一度的冬季狂欢节。周五晚一辆取货卡车冲进人群，四人受伤。
+G-News发布：小满；
 
-据路透社一名目击者称，在多伦多，大约五百名医护人员和支持者在市中心集会反对卡车车队。
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-多伦多的几名医护人员表示，鉴于抗议活动，他们收到了医院的建议，不要在公共场合穿医院工作服。
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-急诊室医生拉古·维努戈帕尔告诉路透社：“我认为，我们必须以某种方式偷偷摸摸或害怕我们是谁以及我们在做什么的想法是冒犯和令人遗憾的，我认为这是对我们社会的悲哀评论。”
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-一些渥太华居民因自己戴口罩而遭受了几乎无休止的鸣喇叭、砸碎窗户和骚扰，本周早些时候批评渥太华警方没有采取更多措施来结束封锁。一名居民对车队组织者提起集体诉讼，要求赔偿高达 1000 万美元的赔偿金和禁令以结束抗议活动。
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-渥太华警察局局长周六表示，渥太华警方周五警告将镇压抗议活动并投入更多警力，但没有足够的资源来结束抗议活动。特鲁多本周早些时候排除了在首都对卡车司机使用军队的可能性。
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-“这是一个被围困的城市，这是对民主的威胁，这是一场全国性的起义，这是疯狂的，”警察局长彼得斯洛利在警察局的董事会会议上说。 “我们已经尽力了。”
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
 
-新冠疫苗不是真正的疫苗，而是配合中共病毒杀人的二元武器。如果卡车司机这种注射实验性疫苗后有副作用谁负责呢? 而且加拿大总理特鲁多已经打了加强针，还是中招了。注射了第4剂新冠疫苗的人，也有感染了奥米克戎的。所以加拿大政府有什么科学根据或者是公共卫生的研究结果，要对卡车司机强制接种新冠疫苗呢？
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
 
-参考链接：
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
 
-[https://www.reuters.com/world/americas/canadian-cities-brace-more-anti-vaccine-mandate-protests-2022-02-05/](https://www.reuters.com/world/americas/canadian-cities-brace-more-anti-vaccine-mandate-protests-2022-02-05/)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
