--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,43 +1,21 @@
 ---
-title: 核酸检测 价格煞人
+title: 新中国联邦2022年发展的三个重点项目
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1967812/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1967766/)
 
-**作者、编辑：Candy**
+撰稿：追着曙光跑
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/核酸.png)图片来源：covidtests.gov
+2月6日，郭先生在大直播上强调，新中国联邦今年2022年发展的三个重点项目。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-07-at-10.25.58.jpeg)
+第一，阻止排华事件的发生，这是新中国联邦今年的重中之重。如果新中国联邦阻止不了西方的排华，那么灭共了也没什么意义。现在需要用币招鼓励国内的各界人士站出来形成全国灭共的趋势，让他们在灭共中真正得到喜币和躺平币。
 
+第二，把现有的项目做强做大，坚决不犯希特勒因无限扩张导致灾难性后果的错误。今年不会再立任何新项目，目标就是把现有的项目搞好做强，然后扩大在全球的影响力。
 
-前几天我收到健康保险公司寄来的一封信，用黑体字说明不是账单（先给予安慰），而是为我们全家的一次共同问诊发来的信息。
+第三、做好新中国联邦教育（GEDU）。教育是立国之本，是中国人未来的希望。新中国联邦会提供喜币或喜美元，吸引国内的教育工作者加入GEDU。套用一句俗语：走新东方的路，让新东方无路可走。
 
-我先找到了医生的名字，可我不认识这位医生；看到了价钱，每人295美元；时间是2021年年底……我努力回想那段时间的经历，没有一点印象、最主要的是我们不可能全家一起去看医生。我的第一反应是担心我家的医疗信息被人盗取了，于是我马上打电话给保险公司。
+2022年，新中国联邦无论是在国际还是在国内的影响力将会更强。
 
-保险公司的客服很快接通了我的电话，验证了我所有的个人信息后，帮我查找与来信内容相关的资料。时间不太长，就得到了的回复：这是对与Covid-19有关的一次检测，因为医生不在保险公司的合作系统，所以通知我：医生可能会给我寄来账单。
-
-我明白了，原来是虚惊一场。同时我也想起来那个时间，我们全家为了一起参观水族馆而做的一次核酸检测。按照水族馆的要求：无论是否打过疫苗，必须出示两天之内的核酸检测阴性的结果才允许参观。为了方便，我们没有提前在我家附近的检测点作检测，而是在参观水族馆的当天，到它旁边的检测站做的检测。
-
-因为那是我们第一次做核酸检测，对此一无所知，所以我马上向客服提出了我的疑问：一个检测，只用了一根棉签，在鼻孔里卷了15秒就交给了工作人员，半小时出来结果，竟然收取那么高的费用？
-
-客服马上回答：我们已经和实验室讨价还价了，保险公司按每人190点几几美元支付的，不需要你支付费用。
-
-客服解释得很清楚，不用我付钱，但我仍然觉得无论谁付钱，这检测费也是实在太贵了。所以，我抱打不平地说出了我的想法。
-
-仔细想想：看看我们的周围，尤其是大的购物中心，或者杂货店的旁边，有多少检测核酸的摊位、站点？可以说：不少。最近又出现网订免费检测条，可以把检测条直接寄到指定地点。因此，使用量无疑更大。
-
-而对于检测的个人来说，表面上是免费的，因为是政府支付费用，但是政府的钱是哪里来的？政府不能生产、不会创造价值，还不是通过税收方式从劳动者身上搜刮来的。如果你不按政府的规定按时交税，你不仅要补缴全部税额，还要缴纳罚款。因为，你违规了、违法了。
-
-通过这次核酸检测产生的费用可以想象：若美国按一亿人口计算，每周一次是190美元，一年52周是1万亿美元？！数目已经令人惊掉下巴；如拿中共国做例子，按5亿人口算，一年就是5万亿美元（也许中共国的检测费用低一些）。据说中共国有人已经做了92次核酸检测，钱的数目真是天文数字了！
-
-难怪全世界的政府都在做着同样的事情：除去强制疫苗，还要做核酸检测！那是天大的利益在背后驱动着。
-
-***发布：Candy***
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+信息来源：[2022年2月6日 文贵大直播：开幕式后普京愤然离去；中俄战略合作虎头蛇尾；贩卖人口中国妇女地位；反疫苗运动及美国经济](https://gtv.org/video/id=61ffc26b3621aa7415d64d51)
 
  
 
