--- a/gnews/39.md
+++ b/gnews/39.md
@@ -1,13 +1,17 @@
 ---
-title: 有声&#124;2022年2月5日 晚 新中国联邦新闻、GTV新闻访谈简报
+title: 有声&#124;普京首次就俄罗斯与乌克兰冲突发表公开谈话，提出解决条件
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966771/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966772/)
 
 配音：香草山教育部 – Rose
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-4.png)
+![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+据媒体报导，俄罗斯总统普京于2月1日公开批评西方忽视莫斯科的安全疑虑，希望能结束不断升温的紧张局势。这是普京首次就俄罗斯与乌克兰冲突发表公开谈话。
 
+普京在莫斯科与匈牙利总理奥班（Viktor Orban）会谈后的记者会上表达了上述观点。他重申，美国及其盟友忽视了俄罗斯的首要安全关切，要求北约（NATO）拒绝乌克兰加入并从俄罗斯附近撤走武器装备。
 
-文字版原文：[2022年2月5日 晚 新中国联邦新闻、GTV新闻访谈简报](https://gnews.org/zh-hans/1963265/)
+俄国要求北约就停止扩张给予有法律约束力的安全保证，以及勿在俄国边界附近部署攻击设施，还要北约将军事部署恢复至1997年以前的状态。与此同时，美国务卿布林肯于2月1日重申美国对乌克兰主权和领土完整的承诺的重要性，敦促俄国从乌克兰边界撤军，立即让情势降温。英国首相约翰逊（Boris Johnson）也敦促俄罗斯后退并以外交方式展开对话，避免造成更大的灾难。
+
+文字版原文：[普京首次就俄罗斯与乌克兰冲突发表公开谈话，提出解决条件](https://gnews.org/zh-hans/1965001/)
 
 音频处理：呼吸的雾霾（文小呼吸）
 发稿：呼吸的雾霾（文小呼吸）
