--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,28 +1,16 @@
 ---
-title: 中共和俄罗斯的高超音速武器威胁美国的预警系统
+title: 一帘幽梦的缘起
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968189/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968294/)
 
-#### 撰稿：彩虹       
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-616.png)图片来源：军事
-2月6号，《新闻极限》报道，五角大楼的一位前工作人员在《金融时报》（Financial Times）发表社论说，美国必须赶上中共国和俄罗斯在高超音速武器方面的进展，否则会被这两个超级大国超越。
+2月1日，郭文贵先生在GTV大直播透露，一帘幽梦这首歌缘起于被救助的战友，是上天派这位战友送来的缘分。由郭文贵先生演唱的这首一帘幽梦，让文贵先生过去的老同事们感到幸福，也鼓励着他们对中共永不妥协的决心。每个人都要懂得，人生最重要的是一定要有信仰。
 
-威廉·施耐德（William Schneider）是哈德逊研究所（Hudson Institute）的高级研究员，曾担任过副国务卿和五角大楼的国防科学委员会主席。他认为，那些对中共国和俄罗斯的（高超音速导弹）测试不屑一顾的人是“忽略了其重要性”。
-
-他说：“机动高超音速飞行器不仅仅是将核弹头运送到目标的另一种手段，相反，它们是旨在击败美国预警能力的‘系统体系’的一个重要组成部分。”
-
-施耐德警告：“中共和俄罗斯的机动高超音速导弹能力，使得这些敌对大国能够拥有击败美国预警系统的综合能力。在这种情况下，美国将对来袭的外国导弹攻击无法预警，应对能力受到极大限制。”
-
-据CNN报道，周四，在一次来自二十多家美国最大的国防公司首席执行官们的高级别会议上，国防部长劳埃德·奥斯汀（Lloyd Austin）鼓励他们加速高超音速武器的开发。
-
-根据报道，去年夏天，俄罗斯进行了试验高超音速的“海燕”核动力和核武装巡航导弹，该导弹具有无限的射程。而中国则测试了两枚高超音速弹道导弹，其中一枚在机动轨道飞行时释放了第二个高超音速物体。
-
-**新闻来源**
-
-[Former Pentagon Official: Chinese, Russian Hypersonic Weapons Threaten US Early Warning System](https://www.newsmax.com/politics/china-russia-u-s-hypersonic-weapons/2022/02/06/id/1055724/)
-
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/ 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
