--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,49 +1,30 @@
 ---
-title: 爆料革命五年最大感受人心难改、怀疑否定一切真实美好
+title: 2.6大直播后记：未来活下去才是一切
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968232/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968317/)
 
-G-TV视频链接：[https://gtv.org/video/id=62007986585ecc15d73e57db](https://gtv.org/video/id=62007986585ecc15d73e57db)
+**整理：Rianna**
+**编辑：Sadhu**
 
-**郭文贵先生：**七哥一贯地爱说实话，有时候话真的说实话不好听。可能我们华人、包括我们，我觉得现在被一贯列为的亚洲人，我们有很多问题确实需要去面对、去思考。特别到今天1月27号在我们爆料革命到5年的时候，我特别要感谢我们所有和我们一起经历过的战友，和现在正在经历的战友，这个是我相信，即使中国人没有多少相信我们会走到今天，也不会有多少人相信能走到这个样子，这是为什么呢？我们在生活中总能看到，特别就现在、此时此刻，我们很多战友，包括从昨天到今天，前天我们直播完以后，美国授权撤离大使馆，不到俩小时，就是能看到那个兴奋、喝醉、哭的、感动铺天盖地。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-620.png)
 
-但是随即我睡了一觉醒来，你会发现战友给我发的很多信息，除了感觉绝大多数都是怀疑，而且这个怀疑很多大家都看看到是捕风捉影。比如说有人说：哎呀，什么美国国务卿又玩儿这一招，副国务卿已经授权大使啦，然后中共已经出来说话啦，实际上是中共说把美国给撵出去的啦，哎呀是不是又玩儿一招呢。
+图片来源：墨尔本雅典娜农场设计组
 
-我这些年最大的感受就是，七哥是走遍了世界的人，就从来你不会看到像我们中国人一样，永远不相信幸福能到自己的头上，也不相信有什么真东西，就是真东西来了也要有一万个怀疑。我们这个华人圈里面到了这个程度，就是自己你根本不知道。这个世界上最可怕的事情就是你自己脑袋上顶了一个屎盆子，然后你一路晃荡晃荡走来，你还特别享受，到人家屋里面、餐厅哪儿都说：“你看我这头上的盆多漂亮啊。”人家说：“你这是屎。”“不，我这享受着呢。”这是很可怕的。
 
-我们中国人自己不知道，这就是中国人走到全世界让人家多不待见。就连到非洲去，我到坦桑尼亚，人都问：“你是台湾来的还是香港来的？”“大陆来的”，人家的眼神都不一样，我说：“台湾和香港和大陆有什么不一样？”他说：“香港是英国的地方，台湾是有民主的地方。我们在这儿非洲大草原接待，只要台湾、香港人来，我们不跟大陆人安排在一起的。”就是中国人你独不独立，就现在这小王子、佳佳、下面这MG，是吧，大牛、巴黎水多，人家摔跤的雅各，这等级已经给你分得很清楚了，不是你决定，是全世界人民给你决定的。
+未来能活下来，能继续活下去，或者继续健康地活下去，你就是赢家。 这是你人生的一场绝对的马拉松， 一次错全错！你这打了疫苗，只要你打了疫苗，你就等着吧！恐惧和死亡，疾病就会伴随着你的一生，没有任何你过去的事，再说什么都没有用，而且不分高低，不分男女。 另外一个就是，当你染上了病毒，如果你还不珍惜，你不吃药，那这个病毒在你身体里绝对不会彻底除去，一定会让你痛苦万分，甚至付出生命。 最后要看到就是加拿大的土豆，大卡车事件等，还有全世界的农民抗议事件，这七哥在一年前16个月前的时候说，疫苗次生灾难，疫苗造成的政治危机军事危机技术危机贸易危机经济金融危机会席卷全球，而且是从今年的5月份开始。 记住，七哥是从2020年初，1，2月份就说过。 我不是神仙，我不能预测，就是我知道共产党的计划和计划的具体细节和基本的掌握的情报，是我得出的结果。 所以说，战友们当看到美国经济战的时候，你们要想一想，我们未来到底该怎么来？面对着这个2022年水虎年。这个，郝海东兄弟启动了水年，今年就是水虎年，上来就流水啊！水虎年对每个人的挑战。 你问问小新，她在没有得病毒之前和小新得了病毒以后的感受是啥样？ 我半夜醒来，我先看一下新信息，我就怕收到了小新就像当年飞飞一样。 哇塞，一旦要有啥，那真的我也受不了，因为咱们已经成兄弟姐妹，像一家人一样，这种关心是控制不住的！就你没办法想，就是你就怕，你听着小新好了，哎呀，这心里就踏实了，就觉得特别舒服啊，就就像天上就像多了个太阳一样！你要想到，就怕小新说我不行了，就是，就像你都活不了了这个！小新最有感受，我们每个人的面临这样的威胁，当你有病，你会孤独的在一个房子里边，你多需要一个温柔的手，来帮帮你，多需要有一个热乎乎的饭。 可是你知道每个人面对威胁的时候你还有心情搞金融搞经济吗？ 就像小新那会儿，老娘就想活着，你们扯什么蛋，搞什么经济啊。没有健康，没有未来，怎么会有爱，怎么会有经济？ 说到这时候，你觉得美国经济会好，世界经济会好， 能好吗？所以， 最后的结论，经济的崩塌，人类面对着健康恐惧的威胁，世界的整个贸易供应链大崩溃，最后都会找共产党算账。 我告诉你们，你可以看到冬奥会开幕式上，你会看到的未来，比齐奥塞斯库还要惨的夫妇俩， 就是整个台上习和他旁边这些个人， 哪个人都会比他们惨。 你们没有感觉，七哥很有感觉，就是内部那些参加冬奥会的，现在正在服务的所谓义工们。 那些恨那些恼怒那些没办法。 绑在手上的镣，强迫着做义工。 我真感觉大地在颤抖，苍天在愤怒，魔鬼在呼啸。 人类到了一个大重启的时候。 邪恶必将被消灭。 经济是世界更迭的必然发生的事情。
 
-那我们中国人，你看看我们在生活中我们发现最多的问题是什么？兄弟姐妹们看到了吗？我们战友当中还是生活当中，就是把一切好人、一切好事儿，猜测、怀疑全给它毁了。然后你就会看到我们身边无数个大头症，无数个大头症，猜测、预测、想象就把一切真理、真相全给你扭曲了。不但这个，大家更重要的我们看到了，我今天特想给大家说的，一说谁谁谁曾经，一说巴黎，“哎呀，巴黎曾经在夜总会唱过歌，坐过台”，大牛，“大牛夜总会里边做过鸭子”，是吧？这一说这俩人就不是好人了，是吧？然后说“哎哟，大牛他舅舅的舅舅是大陆的共产党，所以他不可能灭共”。就是你要这么一说这人类就没好人啦。
+今天直播你在这里看着，再过5月份以后，就像小新在病前病后。 她完全变了一个人。她对生命对爱对人性只有她自己知道。 你活着你是人，你是男是女；你死了，是男是女长好看不好看，年不年轻毛关系没有。 就是一堆灰。 对待人类的经济和未来就这么简单，一样的。 你有这个经济基础就有，没有你想装装不出来。共产党还能再回到以前吗？不可能的。昨天晚上有那个某将军跟我说，他说如果他们下令让我打台湾开始，他说我们是第一波，他说我第一波干的事情我就尽我所能，我把这炮弹导弹我都扔到北京去了。我说，哥们儿，你要这么干了，你就是人类的英雄啊！我说你死了七哥也会让你成为英雄，你活着七哥让你享受终生，哈哈，是吧？他就是因为看咱新中国联邦。 他说我们要打台湾是为啥，我最后研究了研究，就是一帮疯子要打台湾。 就这么简单道理。
 
-所以说我们在生活中这5年来感受最大的痛苦人心难改。很多人因为在共产党大陆这种惨烈的互相竞争的人吃人的文化中长大，不相信真的，不相信善的。更重要的用怀疑来否定一切真实存在和美好的。我们作为一个正常的人宁可相信他好也不愿意相信坏，咱们大陆的是宁可相信他坏坚决不相信他好。我们作为一个正常的人应该帮助和喜欢同类，我们是恨所有的一切，连狗都给它吃了，连狗皮都给它吃了。
+这就是新中国联邦直播的力量，让你找到事情的真相，找到事情的真正的真理，不被人家利用，还能有一个安全健康的未来。
 
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+*发布：盘古相聚*
 
-编辑整理：Jacques；
-
-字幕文件制作：大好河山；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
