--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,32 +1,29 @@
 ---
-title: 爆料革命的新生意——博彩业
+title: 中共安排维族运动员传递奥运圣火作秀 遭美国猛批
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968151/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968244/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/02/爆料革命的新生意-博彩业-.jpg)
-我们不动声色收购了一个英国赌场，现在我们要把战友也拉进来，这个赌场花费了5000多万美元，10%就是500万美金，总共不能超过11个股东。那么11个股东里边，51%一定是喜联储控股，这是必须的，那剩下的就是49%给战友，能出来十来个人，赌牌百分之百是咱们的。
+撰稿：东京樱花团/asket
 
-他们是不同意让战友加入的，昨天晚上他们提出来，战友可以投，但不能超过30%。我说不行，战友必须49%。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/中共安排维族运动员传递奥运圣火作秀-遭美国猛批.png)
 
-第二、不允许战友加入董事会。我说不行战友必须加入董事会。
+[图片来源](https://www.sohu.com/a/520617568_260616)
 
-第三、管理费。老班长，昨天我们发信息说这个基金20%的管理费，挣的钱20%千万记住，战友你有5000万的管理费20%才多少钱，那是个毛毛的钱，一定给基金经理钱，他才能给你挣钱。
+据法新社2月6日报道，因新疆的人权受到侵犯，美国及其一些盟国选择在外交上抵制中国北京冬奥会。为了回应对新疆人权的批评，中共特意安排一名维吾尔族运动员参与北京冬奥会开幕式火炬传递进行作秀。
 
-最后说那我们不能超过这个量，也不能让战友进入董事会，这样可以了吧？我说不行，战友一定要进入董事会，我们吸取了喜联储的教训，这次我们要选战友必须进入董事会。
+新疆是越野滑雪运动员20岁的迪尼热-依拉木江的出生地，她与中国另一位运动员赵嘉文是开幕式上最后一名火炬手。迪尼热-依拉木江来自新疆北部的阿勒泰，这个山区是中共声称发明滑雪运动的地方。
 
-我跟律师在商量怎么要让七哥有一票否决权，来平衡双方，现在我还没想明白呢，这是个大事儿。
+据美国大使周日在美国有线电视新闻网(CNN)上说：“这是中国当局试图转移我们对真正问题的注意力，即维吾尔人正在遭受酷刑，维吾尔人正在遭受中国的虐待，我们需要把这个问题放在首要关注位置。”
 
-*发布：开智则立*
+据美国驻联合国大使琳达.托马斯.格林菲尔德称，“我们知道那裡发生了种族灭绝，”琳达-托马斯-格林菲尔德批评说，”我们已经谴责了它，总统（乔-拜登）也做了谴责。” 据格林菲尔德说，”我们已经明确表示，中国正在明知故犯地实施这些反人类罪行。”当被问及将就人权问题发言的美国运动员在当地的安全问题时，她说她 “希望中国不会对他们採取任何行动”。”格林菲尔德补充说：“我们的目标是确保我们的运动员安全，我们正在尽一切努力来做到这一点。”
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+信息来源：
 
+[美國批評中國讓新疆運動員最後一棒傳遞奧運聖火](https://www.rfi.fr/tw/%E4%B8%AD%E5%9C%8B/20220206-%E7%BE%8E%E5%9C%8B%E6%89%B9%E8%A9%95%E4%B8%AD%E5%9C%8B%E8%AE%93%E6%96%B0%E7%96%86%E9%81%8B%E5%8B%95%E5%93%A1%E6%9C%80%E5%BE%8C%E4%B8%80%E6%A3%92%E5%82%B3%E9%81%9E%E5%A5%A7%E9%81%8B%E8%81%96%E7%81%AB)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
