--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,37 +1,19 @@
 ---
-title: 中共欲借冬奥会洗白侵犯人权罪行
+title: 巴西新冠死亡人数创历史新高达1308人
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968147/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968233/)
 
-整理编辑：东京樱花团/peterwong
+撰稿：东京樱花团/立正道
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-618.png)图片来源于本文链接
+路透社，圣保罗2月5日，巴西卫生部长宣布，过去24小时内确诊的中共病毒（新冠病毒Covid-19）死亡人数达到1308人，新增感染人数达到197442人。死亡人数是自去年7月29日以来的最高水平。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/中共欲借冬奥会洗白侵犯人权罪行.png)[图片来源](https://news.cctv.com/2021/12/15/ARTIO3O3IJuCsGbJxvOvRTwn211215.shtml)
+此外，据圣保罗州官员称，上周在该州发现了两例 Omicron 菌株衍生物“BA.2”。
 
-北京冬奥会2月4日在中共国国家体育场“鸟巢”举行开幕式，最后一棒的两名火炬手中，其中一人是来自新疆的维吾尔族运动员迪妮格尔．衣拉木江。人权组织表示，中共“侵犯人权的行为，无法用体育洗白”，呼吁要让北京的宣传产生适得其反效果，借此引起人们对这类国家恐怖主义的关注，并形成全球运动。
+信息来源：[ブラジルのコロナ死者が過去最多1308人、約6カ月ぶりに更新](https://jp.reuters.com/article/worldNews/idJPKBN2KC02W)
 
-20岁的迪妮格尔来自新疆阿勒泰地区，在被选为最后2棒火炬手的同时，正值许多西方国家因中共迫害维吾尔族等少数民族，对冬奥进行外交抵制。
-
-美国驻联合国大使批评，此举是中共意图分散外界对少数民族种族迫害的关注。
-
-联合国和人权观察等组织均表示，中共将多达100万维吾尔族穆斯林关押在集中营，他们受到虐待和权利侵犯。
-
-冬奥会开幕前，各国陆续宣布进行外交抵制，因为中共“正在进行种族灭绝和反人类罪”，并在推特写道“侵犯人权的行为，无法用体育洗白”。
-
-分析显示，中共选择维吾尔女运动员做火炬手，是为掩饰指责其侵犯人权的说法，刻意标榜“一切正常”，却无法掩饰恶行。
-
-人权组织明确指出，维吾尔人“面临着系统的、国家组织的大规模监禁、酷刑和迫害，构成反人类罪”，他们被关押在所谓的再教育营，被强迫劳动、绝育、被殴打等酷刑。中共对此极力否认，但也拒绝让联合国人权事务高级专员前往新疆调查；然而有集中营卫星图像，且有逃出的维吾尔人证词，证实人权组织所言确凿。
-
-消息来源:
-
-[維族女點聖火 中共侵人權難洗白](https://tw.news.yahoo.com/%E7%B6%AD%E6%97%8F%E5%A5%B3%E9%BB%9E%E8%81%96%E7%81%AB-%E4%B8%AD%E5%85%B1%E4%BE%B5%E4%BA%BA%E6%AC%8A%E9%9B%A3%E6%B4%97%E7%99%BD-160000297.html)
-
-[中共派維族選手當冬奧火炬手 美國批：分散種族迫害的關注](https://tw.news.yahoo.com/%E4%B8%AD%E5%85%B1%E6%B4%BE%E7%B6%AD%E6%97%8F%E9%81%B8%E6%89%8B%E7%95%B6%E5%86%AC%E5%A5%A7%E7%81%AB%E7%82%AC%E6%89%8B-%E7%BE%8E%E5%9C%8B%E6%89%B9-%E5%88%86%E6%95%A3%E7%A8%AE%E6%97%8F%E8%BF%AB%E5%AE%B3%E7%9A%84%E9%97%9C%E6%B3%A8-01)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
