--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,31 +1,58 @@
 ---
-title: 美国发出警告：中俄结盟抗美 后果严重！
+title: 普京为与中共国达成的价值千亿美元的协议而“欢呼”
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968122/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968230/)
 
-整理编辑：东京樱花团/peterwong
+翻译&评论：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-22.png)图片来自网络
+《路透社》近日报道，俄罗斯总统弗拉基米尔·普京周五公布了价值约 1175 亿美元的俄罗斯与中共国的新石油和天然气交易，承诺在与欧洲客户在乌克兰问题上的紧张局势加剧之际，将增加俄罗斯在远东的出口。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/美国发出警告：中俄结盟抗美-后果严重！.png)[图片来源](https://www.theguardian.com/us-news/2021/jan/20/biden-press-briefing-jen-psaki-white-house-secretary)
+已经是北京第三大天然气供应国的俄罗斯一直在加强与世界最大能源消费国中国的联系，以减少对传统欧洲能源客户的依赖。
 
-针对中俄结盟抗美的联合声明，美国和北约作出回应。美国白宫提醒中共，如果俄罗斯与乌克兰爆发武装冲突，这将会影响到中共国的国际利益。北约领导人果断拒绝了中俄要求北约停止东扩的主张。
+普京在与中共国国家主席习近平讨论更密切合作的会议上说：“我们的石油商已经为中华人民共和国的油气供应准备了非常好的新解决方案。”
 
-白宫新闻秘书莎琪周五（2月4日）对记者表示，“我们已经（向中方）传达了一个信息：欧洲如果发生一场破坏稳定的冲突，这将会影响到中共国在世界各地的利益，中共国当然应该明白这一点。”
+他补充说：“天然气行业向前迈进了一步，”他指的是一份每年从俄罗斯远东向中国供应 100 亿立方米的新合同。普京日前在北京参加冬奥会。
 
-莎琪说，美国和中共国保持“很高层级的直接接触”。“我们目前关注的焦点是继续团结盟友和合作伙伴，一旦俄罗斯入侵乌克兰，（我们将共同）作出果断回应。”
+根据路透社的计算，光是天然气的销售就可在25年里带来375亿美元的收入，假设每1000立方米平均价格150美元，这也是俄国天然气巨头俄罗斯天然气工业股份公司目前和中国的协议的价格。
 
-斯托尔滕贝格表示，北约正在密切关注着中共国和俄罗斯加强军事合作的动作。
+克里姆林宫发言人德米特里佩斯科夫表示，该协议为期 25 年，而一位中国行业消息人士称，该协议为期 30 年。
 
-俄罗斯总统普京周五与中共国国家主席习近平发表了联合声明，对北约东扩表示反对。俄罗斯在俄乌边界部署十几万大军向乌克兰施压。
+另外，以普京的长期盟友伊戈尔谢钦为首的俄罗斯石油巨头俄罗斯石油公司与中国中石油签署了一项为期 10 年通过哈萨克斯坦供应 1 亿吨石油的协议，有效延长了现有的协议。
 
-美国负责东亚和太平洋事务的助理国务卿丹尼尔·克里滕布林克（Daniel Kritenbrink）周五对媒体表示，如果俄罗斯选择对乌克兰再次入侵，这将会致中共于非常“尴尬的”境地，因为这就意味着中共国愿意“容许或者是默许”俄罗斯对乌克兰进行胁迫。
+俄罗斯石油公司表示，新协议价值 800 亿美元。
 
-消息来源:
+这些协议提振了卢布和俄罗斯股市，包括俄罗斯石油公司和俄罗斯天然气工业股份公司的股票。
 
-[中俄结盟麻烦多，白宫提醒北京小心后果](https://www.voachinese.com/a/u-s-warns-conflict-would-hurt-china-s-interests-ukraine-update-20220205/6428010.html)
+普京指责美国加剧了俄罗斯邻国乌克兰的紧张局势，乌克兰因想要加入北约而激怒了莫斯科。超过十万名俄罗斯军队已在乌克兰边境附近集结。西方国家指责莫斯科策划入侵，但遭到否认。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+俄罗斯是欧洲最大的天然气供应国，西方国家担心一旦发生冲突，已经紧张的供应可能会中断。然而，与北京的新协议不会让莫斯科将原本运往欧洲的天然气分流，因为它涉及来自太平洋萨哈林岛的天然气，没有连接到俄罗斯的欧洲管道网络。
+
+俄罗斯天然气工业股份公司在一份声明中表示，它计划将向中国的天然气出口量增加到每年 48亿立方米，包括通过新同意的管道，该管道每年从俄罗斯远东地区输送 10亿立方米。
+
+根据之前的计划，俄罗斯的目标是到 2025 年向中国供应 38亿立方米。该公告没有具体说明何时达到新的 48亿立方米目标。
+
+俄罗斯天然气工业股份公司与壳牌等外国合作伙伴已经在萨哈林岛每年生产超过 1000 万吨液化天然气。
+
+“向中共国东北端输送天然气使该项目对中国具有战略吸引力，因为唯一真正的替代供应将是更昂贵的液化天然气，”总部位于莫斯科的 BCS 经纪公司在一份关于 10 亿立方米交易的报告中表示。
+
+一位业内消息人士周五早些时候告诉路透社，俄罗斯天然气工业股份公司垄断了俄罗斯的管道天然气出口，该公司已与中国石油天然气集团公司达成了一份为期 30 年的合同，第一条天然气将在两三年内流经新管道。
+
+消息人士称，天然气交易将以欧元结算，因为莫斯科试图从美元实现多元化，并对来自华盛顿的任何潜在制裁进行对冲。
+
+**西伯利亚的力量**
+
+俄罗斯现在通过其西伯利亚电力管道向中国输送天然气，该管道于 2019 年开始输送供应，并通过运输液化天然气。 它在 2021 年向中国出口了 16.5 亿立方米的天然气，其中通过西伯利亚电力出口了 10.5 亿立方米，这也与向欧洲输送天然气的管道分开。
+
+普京由包括谢钦在内的几名俄罗斯官员和企业高管陪同。 俄罗斯天然气工业股份公司负责人阿列克谢米勒不在代表团中。
+
+中共国还取消了对俄罗斯小麦和大麦进口的限制。
+
+就看了个冬奥开幕式，在北京只待了九个小时，就带着1175亿的合同让习近平签，反而中共官媒还在大肆赞扬俄罗斯“普京真给面子，就他一个大国领导参加开幕式！”。中国老百姓数年来为中共签订的这些不平等条约付出了沉重的代价，灭共以后一定要废除中共签订的一切不平等条约，中国人才能放下负担的走向未来。
+
+参考链接：
+
+[https://www.reuters.com/world/putin-tells-xi-new-deal-that-could-sell-more-russian-gas-china-2022-02-04/](https://www.reuters.com/world/putin-tells-xi-new-deal-that-could-sell-more-russian-gas-china-2022-02-04/)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
