--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,34 +1,23 @@
 ---
-title: 北京冬奥奥运团队开始对隔离酒店条件吐槽
+title: 立陶宛外长今访澳 坚称不会更名台湾代表处
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968080/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968214/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-95.jpg)
-图片来源：网路图片
+撰稿：东京樱花团/asket
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-617.png)[图片来源](https://newsline.news/gabrielius-landsbergis-minister-towards-authoritarian-regimes/)
+立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）于2月6日至10日，将先后访问新加坡、澳大利亚，开拓亚洲及大洋洲市场。据自由时报2月6日引述消息报道说，立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）重申不会屈服中共经济胁迫。
 
-据美联社北京2月6日报道，一些不幸在北京奥运会上被检测出中共病毒（冠状病毒）阳性的奥运运动员认为他们的隔离条件使糟糕的情况变得更糟，食物不足，无法食用的饭菜，没有训练设备。
+立陶宛外长蓝斯柏吉斯访澳前夕，接受《澳洲金融评论报》独家专访指出，立陶宛与澳大利亚此次交流议题将聚焦中共的胁迫和贸易制裁，立澳2国将就如何处理这种情况（被中国经济霸凌）以及学到了什么，又是如何从中变得更强大等议题交换意见，并互相帮助。
 
-俄罗斯冬季两项运动员瓦莱里娅·瓦斯涅佐娃（Valeria Vasnetsova）在Instagram上从北京的一个所谓的隔离酒店发帖说，“我的胃很痛，脸色很苍白，眼睛周围有巨大的黑眼圈，我希望这一切都能结束。我每天都在哭，实在太累了”。
+据该报称，蓝斯柏吉斯强调，某些国家不应使用经济等胁迫方式，迫使另一个国家改变外交政策。但当前国际商定的规则和法规，正受到“强权国家”挑战，我们正在捍卫国家主权。
 
-她的问题不是病毒的任何症状，而是食物。瓦斯涅佐娃周四发布了一张她所说的 “已经吃了五天的早餐、午餐和晚餐 ”的照片，托盘上的食物包括普通意大利面、橙汁、骨头上的焦肉、一些土豆，没有蔬菜。
+对于外界盛传台湾驻立代表处可能因中共施压而更名一事，蓝斯柏吉斯再度驳斥，他重申，“无论如何，立陶宛都不打算更名。”“他们（指台湾）的正式名称不会改变。
 
-她说，她主要靠几块意大利面生存，因为“不可能 ”吃其他东西，“但今天我吃了他们提供的所有脂肪，而不是肉，因为我非常饿。”她补充说，她的体重下降了很多并且骨头已经显现出来了。
+信息源：[立陶宛外長今訪澳-堅稱台灣代表處不更名](https://www.rfi.fr/tw/%E6%AD%90%E6%B4%B2/20220206-%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%A4%96%E9%95%B7%E4%BB%8A%E8%A8%AA%E6%BE%B3-%E5%A0%85%E7%A8%B1%E5%8F%B0%E7%81%A3%E4%BB%A3%E8%A1%A8%E8%99%95%E4%B8%8D%E6%9B%B4%E5%90%8D)
 
-隔离酒店越来越成为此次奥运运动员及其团队的批评对象，他们正在游说组织者进行改进。隔离缺乏透明度，只有一些病毒呈阳性的运动员被迫进入其团队无法进入的隔离酒店，而处于类似情况的队友则被允许在奥运村内进行隔离。
-
-对检测出阳性的运动员的规定是，没有症状的人要到专门的酒店进行隔离。任何有症状的中共病毒患者将被送往医院。在这两种情况下，他们将不能参加比赛，直到被允许出院。
-
-各国代表队已经开始公开批评。
-
-在三届北欧综合运动会金牌得主埃里克·弗伦泽尔检测出阳性后，德国代表团团长德克·希梅尔普芬尼格（Dirk Schimmelpfennig）对 “不合理 ”的生活条件进行了抨击。他在FAZ报纸报道的评论中说，德国希望有更大、更卫生的房间，以及更正规的食物供应，以便最终被释放的运动员仍然适合参加比赛。
-
-比利时俯式雪橇运动员金·梅勒曼斯被从隔离酒店带回了运动员村的隔离区，她的主要怨言是缺乏信息。她被装进一辆救护车，在她以为自己会被释放的那一天从一个隔离设施运到另一个隔离设施。
-
-瓦斯涅佐娃在隔离区的时间发现运动员们得到的食物更差，并用一张为她同样隔离的队医提供的食物图片强调了这一点。她不明白，为什么对运动员有这种态度？
-
-新闻来源：[Olympic teams raise concerns over quarantine hotels](https://apnews.com/article/winter-olympics-quarantine-hotels-e2d2ffc60d9800cf1951cc3eaed323cb)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
