--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,32 +1,27 @@
 ---
-title: 中日财经爆&#124; 美国将中共国进口光伏设备关税延长4年
+title: 中共和俄罗斯的高超音速武器威胁美国的预警系统
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968066/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968189/)
 
-整理编辑：东京樱花团/peterwong
+#### 撰稿：彩虹       
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/美国将中共国进口光伏设备关税延长4年.png)[图片来源](https://www.crushpixel.com/stock-photo/engineer-working-on-checking-maintenance-2787861.html)
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-616.png)图片来源：军事
+2月6号，《新闻极限》报道，五角大楼的一位前工作人员在《金融时报》（Financial Times）发表社论说，美国必须赶上中共国和俄罗斯在高超音速武器方面的进展，否则会被这两个超级大国超越。
 
-美国总统拜登周五（2月4日）将川普时期主要针对中共国的进口光伏设备关税延长四年，但作为对安装商的一项重大让步，拜登也放宽了条款，将在美国大型项目中占据主导地位的面板技术排除在征税范围之外。
+威廉·施耐德（William Schneider）是哈德逊研究所（Hudson Institute）的高级研究员，曾担任过副国务卿和五角大楼的国防科学委员会主席。他认为，那些对中共国和俄罗斯的（高超音速导弹）测试不屑一顾的人是“忽略了其重要性”。
 
-根据白宫声明，这项延长四年的关税豁免了双面太阳能板(bifacial panel)，这种电池板可以两面发电，颇受大型开发商青睐。在川普开始征收关税时，这种技术刚刚起步，但现已用于多数美国大型太阳能设施。
+他说：“机动高超音速飞行器不仅仅是将核弹头运送到目标的另一种手段，相反，它们是旨在击败美国预警能力的‘系统体系’的一个重要组成部分。”
 
-拜登政府还为来自邻国加拿大和墨西哥的免税供应打开了通道，这两个国家目前占美国的进口量不到1%。
+施耐德警告：“中共和俄罗斯的机动高超音速导弹能力，使得这些敌对大国能够拥有击败美国预警系统的综合能力。在这种情况下，美国将对来袭的外国导弹攻击无法预警，应对能力受到极大限制。”
 
-前总统川普在2018年使用1974年贸易法案第201条规定的授权，对光伏产品进口产品实施了为期四年的关税措施，一开始税率为30%，在最后一年下降到15%，希望藉此在美国太阳能制造业创造就业机会。
+据CNN报道，周四，在一次来自二十多家美国最大的国防公司首席执行官们的高级别会议上，国防部长劳埃德·奥斯汀（Lloyd Austin）鼓励他们加速高超音速武器的开发。
 
-这些措施原定2022年2月6日到期，但一些美国太阳能制造商去年寻求延期，认为他们的产品仍然无法与海外制造的商品竞争。这些商品主要来自中共国，在美国市场占据主导地位。他们举出一些不利因素，包括公司在关税生效前的进口囤积、中共病毒（新冠)疫情的经济影响以及成本上涨等。
+根据报道，去年夏天，俄罗斯进行了试验高超音速的“海燕”核动力和核武装巡航导弹，该导弹具有无限的射程。而中国则测试了两枚高超音速弹道导弹，其中一枚在机动轨道飞行时释放了第二个高超音速物体。
 
-消息来源:
+**新闻来源**
 
-[拜登政府将特朗普时期光伏进口关税延长四年 但条款有所放宽](https://cn.reuters.com/article/usa-solar-tariffs-0204-fri-idCNKBS2KC00J?il=0)
-
-[中日财经爆|美国考虑延长来自中共国太阳能进口关税](https://gnews.org/zh-hans/1922536/)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+[Former Pentagon Official: Chinese, Russian Hypersonic Weapons Threaten US Early Warning System](https://www.newsmax.com/politics/china-russia-u-s-hypersonic-weapons/2022/02/06/id/1055724/)
 
  
 
