--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,31 +1,50 @@
 ---
-title: 2022年2月6日 晚 新中国联邦新闻、GTV新闻访谈简报
+title: 单伟健在杨贝贝虚假采访背后的金融运作
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1968020/)
+`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1968053/)
 
-作者：香草山翻译部
+加拿大温哥华扬帆农场：薇文viven
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEW-GTV-MOS-LOGO-3.jpg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-3-edited.jpg)图片来源：weibo
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-5.png)
-校对：Stay文苑
+前段时间HBO Vice 散播种族歧视和恶意诋毁爆料革命和郭文贵先生的视频，背后有中共巨资借用“腾讯音乐娱乐”(TME)操作平台，利用海外金融投资公司“太盟集团”(PAG)  和“德太资本”(TPG)，通过中共特务单伟建和王岐山家族的孙强两人处心积虑运作的结果。
 
-编辑：Stay文苑
+单伟建的太盟在2017年持股9.8%成为 TME的第二大股东；2018年 腾讯音乐在美国上市，太盟靠出售美国存托凭证募资$5,700 万美元，并继续持股 9% ；
 
-发稿：Stay文苑
+华纳公司旗下的HBO2013年与腾讯签约入驻中国，2018年因主持人嘲讽习近平为“维尼熊”后，一直被中共封杀，失去每年近50%增长的华纳损失惨重。
 
-新闻： [https://gtv.org/broadcast/watch/620076043621aa7415d6dac6](https://gtv.org/broadcast/watch/620076043621aa7415d6dac6)
-访谈： [https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d](https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d)
+单伟建出手使用金融手段控制华纳： TME投资 “华纳音乐”的股权2%、双方成立合资公司、允许华纳音乐向TME的经营者授权，华纳公司和华纳音乐的股价双双开始飙升。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-callendar.jpeg)
+孙强运作的德太资本2017年就已投资 HBOVice 达$4.5亿，2019年，有中金资本的平台撑腰，又注资$4500万美元，助HBOVice上市，但至今未成功。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+中共蓄谋已久，花费高昂代价，吃准华纳和HBO逐利的贪婪本性，用单伟建和孙强两路夹击，犁庭扫穴，使之成为中共作恶的工具和替罪羊。中共因惧怕新中国联邦而导致的又一愚蠢行径，不断为全球灭共逆增上缘。
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/f.jpg)图片来源：GNEWS
+
+
+参考资料：
+
+[Tencent Music Entertainment: China’s Largest Online Music Entertainment Platform Operator](https://seekingalpha.com/article/4412340-tencent-music-entertainment-online-music-entertainment-platform-operator)
+
+[HBO Website Is Down in China After John Oliver Skewers Xi Jinping on Last Week Tonight](https://time.com/5321945/hbo-china-john-oliver-xi-jinping/)
+
+[Private Capital-backed Tencent Music Raises US$1.1 Billion in Initial Public Offering (Asia)](https://www.globalprivatecapital.org/newsroom/private-capital-backed-tencent-music-raises-us1-1-billion-in-initial-public-offering-asia/)
+
+[SEC FORM F-1 Tencent Music Entertainment Group 2018.10](https://www.sec.gov/Archives/edgar/data/1744676/000119312518290581/d624633df1.htm)
+
+[Warner Music Partners With Tencent on Joint Venture Record Label in China](https://www.hollywoodreporter.com/news/music-news/warner-music-partners-with-tencent-on-joint-venture-record-label-in-china-4154621/)
+
+[腾讯音乐娱乐集团(TME)公司深度报告](http://pdf.dfcfw.com/pdf/H3_AP201901281289167588_1.pdf)
+
+[TPG与中金资本成立 “中国协同效应”平台](https://www.financialnews.com.cn/zq/pevc/201901/t20190110_152759.html)
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/e-edited.jpg)图片来源：sjmrw
+
+
+* * *
+
+编辑发稿：硫酸羟氯喹64
 
  
 
