--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,35 +1,31 @@
 ---
-title: 澳洲政府明确指示大学：远离中共并与英美加强合作
+title: 2022年2月6日 晚 新中国联邦新闻、GTV新闻访谈简报
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1967949/)
+`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1968020/)
 
-整理/编辑：小红帽
+作者：香草山翻译部
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/dfef.png)图片来源：雅典娜设计组(614)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEW-GTV-MOS-LOGO-3.jpg)
 
 
-根据《澳大利亚人报》2月7日报道，澳洲政府发出“明确信号”，要求澳大利亚大学与英国和美国大学进行更紧密的合作，以实现市场多样化，并脱离与中共国的研究合作。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-5.png)
+校对：Stay文苑
 
-澳大利亚八所研究最密集的大学的八校联盟（Group of Eight）本周与英国的罗素集团（The Russell Group）举行了一次圆桌会议，讨论深化双方的关系。
+编辑：Stay文苑
 
-这次圆桌会议是在AUKUS澳英美协议和与英国的自由贸易协定之后发起的。该协议促进了英国和澳大利亚在新技术和国防相关科学商业化方面的合作。
+发稿：Stay文苑
 
-八校联盟首席执行官维姬·汤普森（Vicki Thompson）表示，虽然大学不一定想脱离（与中共）现有的伙伴关系，但大学已经在与中共合作方面收到了明确信息。
+新闻： [https://gtv.org/broadcast/watch/620076043621aa7415d6dac6](https://gtv.org/broadcast/watch/620076043621aa7415d6dac6)
+访谈： [https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d](https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d)
 
-澳大利亚国立大学（ANU）安全学院院长罗里·梅德卡夫（Rory Medcalf） 表示，深化澳英研究合作是“对新地缘政治现实的合理回应”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-callendar.jpeg)
 
-当被问及政府是否已经向大学发出远离中共国研究合作的信号时，代理教育部长斯图尔特·罗伯特（Stuart Robert）说，他 “欢迎 “这次圆桌会议的举行。
-
-新闻链接：[澳大学收到“明确信号”：与英美加强研究合作 远离中国](https://cn.theaustralian.com.au/2022/02/07/63268/)
-
-*发布： tianzhihuan*
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
  
 
