--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,15 +1,17 @@
 ---
-title: 有声&#124;甜蜜蜜运动的三个回合
+title: 有声&#124;美国国税局不会对未售出的质押加密货币作为收入征税
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966773/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966774/)
 
-配音：香草山教育部 – Rose
+配音：香草山巡管部 – 格格
 ![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-在2月2日的大直播中，郭文贵先生谈到甜蜜蜜灭共运动的三个回合。 第一个回合是美国大使馆的授权撤离。第二个回合，就是今年的三首灭共歌曲，即《甜蜜蜜》、《一帘幽梦》和《塞北的雪》。第三个回合就是对着中共的冬奥会去的。郭先生在直播中宣布，他现在正式向中共高层发出战书，要把中共的冬奥会，变成冬眠会。郭先生说，明人不做暗事，他从来不使用背后的阴招。虽然共产党通过黑客技术黑了郭先生的手机，但是却无法挡住甜蜜蜜运动的强势展开。
+当地时间2月3日消息，美国国税局在未来可能不会对未售出的质押加密货币作为收入征税，该决定是将质押奖励归类为财产而非应税收入。
 
-郭先生说，他的第三个回合，一定会把中共冬奥会打残，打成冬眠会。因为没有任何人比他更了解中共冬奥会的来龙去脉，尤其是它的选址及其致命弱点。虽然中共有230万所谓的人工造雪弹，但是郭先生绝对有办法让它们无法达到目的。
+报道称，2021年5月26日约书亚和杰西卡.贾莱特夫妇向美国田纳西州中区地方法院提交法律诉状，要求退还2019年因收到8876枚Tezos代币而支付的3293美元所得税。据知情人士透露，美国国税局已批准全额退还他们通过质押获得的代币的税款。
 
-文字版原文：[甜蜜蜜运动的三个回合](https://gnews.org/zh-hans/1965073/)
+专业人士分析，喜币H-Coin就是最好的数字黄金抵押品，拥有者根本不需要卖出，需要现金时在数字银行抵押贷款即可。
+
+文字版原文：[美国国税局不会对未售出的质押加密货币作为收入征税](https://gnews.org/zh-hans/1956578/)
 
 音频处理：呼吸的雾霾（文小呼吸）
 发稿：呼吸的雾霾（文小呼吸）
