--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,19 +1,13 @@
 ---
-title: 有声&#124;美国会议员提案吁台美复交渐获支持
+title: 有声&#124;2022年2月5日 晚 新中国联邦新闻、GTV新闻访谈简报
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966770/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966771/)
 
 配音：香草山教育部 – Rose
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-当地时间2月4日媒体报导，美国共和党籍联邦众议员帝芬尼（Tom Tiffany）在上届会期曾提出呼吁台美复交、签署自由贸易协议（FTA）与支持台湾加入国际组织的决议案，当时仅获得另一位共和党籍议员联署支持。
+![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-4.png)
 
-帝芬尼众议员在本届会期再度提出此议案，至目前为止，已经获得20位共和党籍议员的联署。帝芬尼表示将寻求民主党籍议员的联署，并希望在2022年度能让此议案成为跨党派支持的法案。
 
-过去一年，由于中共在台海持续制造破坏现状的军事侵扰行动，已经引起国际社会的警觉，纷纷以军舰巡弋，自由航行通过台海及南海的行动，来展现护卫自己国家利益的决心。本届美国联邦议会参众两院在去年一年中就提出了51项支持台湾的议案。这数目已经超过前届议会在两年内提出的32项友台提案。
-
-台美复交的提案，已经从过去无人想提，到现在有20位联邦议员愿意联署。 随着中共的越趋疯狂，为了美国自身的利益，美国将会有更多议员关注及支持台美复交的议题。
-
-文字版原文：[美国会议员提案吁台美复交渐获支持](https://gnews.org/zh-hans/1958651/)
+文字版原文：[2022年2月5日 晚 新中国联邦新闻、GTV新闻访谈简报](https://gnews.org/zh-hans/1963265/)
 
 音频处理：呼吸的雾霾（文小呼吸）
 发稿：呼吸的雾霾（文小呼吸）
