--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,27 +1,45 @@
 ---
-title: 七哥谈中共和哈萨克斯坦（二）
+title: 今天下午 5 点，所有自由车队卡车和平的撤离了魁北克市中心
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968166/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1968252/)
 
-整理：雅典娜速记组
-编辑：tianzhihuan
+2022-02-06
 
-哈萨克斯坦，这个整个纳扎尔巴耶夫你看看他全家几乎都是什么油、气、通信，你但凡去过那个国家，你感觉这个国家就是他一家人的，不但是石油。能源、矿业，他都弄着啊，就连那个首都的夜总会，你一查都是女婿的，什么侄子的全都是。
+作者：16626
+![](https://assets.gnews.org/wp-content/uploads/2022/02/D2AEMGLRNIIJQ3NCNTG.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+#### 下午 5 点，最后一批自由车队卡车和平地撤离了魁北克市中心
 
-我喝完酒以后，晚上到他们夜总会去，他们的夜总会是在楼上，不像中国人夜总会在楼下。中国人有个习惯思维，所以就在地下。移到地上，就是很高级了，警察保护了他们，说在最顶楼，中间这转盘，那个真的是就像青青草原的脸，那个美女漂亮啊，咔咔跳，舞花一进去以后，他们在一个转的台子上跳啊，各种舞蹈，那个音乐，进去以后你情不自禁的就开始跟着晃起来了，然后这边就人家就端着来了，他们好厉害呢夜总会啊，比七哥那个裕达俱乐部厉害，比盘古还厉害，人家那跨过来又端着盘子，你都不知道，就一个盘子上就放了10个杯子或者7个杯子，但你拿那个杯子的旧跟别人的杯子绝对不一样，它就会那么巧妙，都是那种黑珍珠，300年的黑珍珠。我在喝的香槟，都是超级酒就给你上来了。你说他有多腐败这个国家啊，那一顿晚饭下去啊，都是上百万美元。
+TVA Nouvelles（2022年2月6日，下午5点46分）发表一篇题为《所有卡车已经撤离了魁北克市中心》的文章报道，今天下午 5 点，在围观的示威者的掌声中，最后一批自由车队卡车和平地撤离了魁北克市中心，自由车队称计划在两周内返回魁北克市。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/@8I_LDVCD1C88G0SFQPC.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+#### 最后一批停在勒内-莱维斯克大道（boulevard René-Lévesque）上的卡车在围观的示威者的欢呼声中离开了
 
-然后，这总统的家人，就是在场的时候，都是警察，他们叫做桂军，就是特种秘密部队的人，就在旁边护着我们，而且好多也是女的。而且给我讲海南话，讲郭先生您好，然后讲呀我们每年都到海南去度假啊。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（二）-.jpg)
-2022年1月7日文贵大直播
+魁北克市警察局警告卡车抗议者，下午 5 点（2022年2月6日）后将不再允许车辆通行，那些不离开的卡车将被罚款，甚至被拖走，“以避免（构成）继续违章犯罪”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/O81SPCGAMHI@ROA@AGK.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
+在（2022年2月6日）下午 5 点后不久，在最后一批（围观的）示威者的掌声中，所有卡车都和平地离开了（示威）现场
+![](https://assets.gnews.org/wp-content/uploads/2022/02/WSHBDPZQ25IPKIB1XO.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
+#### “自由车队”在两周内重新返回
 
-*发布：tianzhihuan*
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+然而，魁北克“自由车队”的组织者计划在两周内重新返回，以“给勒戈Legault（做出）让步的时间”，并制作一个以“自由”为主题的“伍德斯托克（伍德斯托克音乐艺术节）”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/04M3JKIEGY8LFFVW.png)图片来源： 截屏于[Rendez-vous dans 2 semaines: quitter pour mieux revenir](https://www.tvanouvelles.ca/2022/02/06/rendez-vous-dans-2-semaines-bernard-rambo-gauthier-demande-aux-manifestants-de-quitter)图中显示伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）在演讲
+“我们今晚就走，但我们会在两星期后回来[…]。你有 15 天的时间来准备 […]，（回来时）我们会有更多的人”，伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）周五下午（2022年2月4日）这样说。
 
+另外，Gnews（2022 年 2 月 5 ）发表一篇题为《[自由车队：在新平台上筹集的资金已超过90万元](https://gnews.org/zh-hans/1963141/)》的文章报道，在 GoFundMe 拒绝向全国各地示威反对强制接种疫苗的卡车司机支付筹集的资金后，他们（卡车司机）转向另一个平台，而且已经筹集了近 100 万元。
+
+## 请读者学习2月6号郭先生Gettre视频
+
+2月6号郭先生发表了题为《[尊敬的战友们好！关于如何使用GTV帮助加拿大卡车反疫苗运动的几点声明！](https://gettr.com/post/pswoyr9fbf)》的Gettre视频。
+
+这次卡车司机的行动背后的政治博弈非常激烈。请读者，特别是身处北美的战友，记住，新中国联邦人是有信仰，有底线的，一定要坚持，为真不破，报道真相，不煽动或鼓励暴力。相信郭先生完全有能力和智慧以和平方式消灭世界的一切不公平。欢迎读者访问并在“[加拿大温哥华圆成农场](https://gettr.com/user/himalayavang)”上留言。
+
+参考链接：
+[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+
+编辑：LILY
+发布：肥鯮
+
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
