--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,52 +1,32 @@
 ---
-title: 海外欺民贼三十年vs新中国联邦的甜蜜蜜运动
+title: 近三千名维州学生在开学第一周新冠检测呈阳性
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968156/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968251/)
 
-佚名
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image1-22.png)
-曾有这么一伙人在一九八九年六四之际，利用中共血洗天安门，以学运领袖自居拿着六四“血卡”逃到美国一呆就是三十多年。
+翻译&评论：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/4-12.png)图片来自网络
+澳大利亚媒体《ABC News》近日报道，在维多利亚州学校开学的第一周，超过 2900 名学生和 400 多名教师的中共病毒检测呈阳性。
 
-他们不工作、不学习，一直蘸着六四的人血馒头，搞募捐吃得津津有味，平日里主要是开会、拍照与吃饭，在中共控制的华人媒体上高谈阔论、口沫横飞、摇头晃脑、指点江山的模样。表面上都是反共斗士，暗中却是中共派到海外的九层妖塔。用小骂大帮忙的方式帮助中共精神维稳墙内民众，收集海外情报、迫害真正的反共义士。
+“我们看到“新冠检测呈阳性”的学龄人群有所增加，”马特森女士（澳大利亚卫生部副部长）说。
 
-文贵先生二零一七年的横空出世，扒开了这伙人的画皮，露出了他们的魔鬼面目。
+“这并不意外。”
 
-文贵先生掀起一场人类有始以来的爆料革命，用真正的行动去灭掉中共！打得中共节节败退、毫无招架之力，打得海外欺民贼们满地找牙、哀嚎一片，不能像从前一样骗捐骗色，骗吃骗喝。
+政府“强烈建议”主流学校的教师和学生每周做两次快速抗原检测（RAT）、特别教学场合每天一次快速抗原检测。
 
-夏业良就跟墙内某位大v 感叹：当初围在他周围的无数粉丝，最后都成了支持爆料革命的人，反过来这些人也是骂他最狠的人。
+这些病例中，许多都是在上述快速抗原检测中测出来的。
 
-这就是爆料革命的力量，是真与假、正与邪、光明与黑暗的较量。这些人渣怎么可能不集中所有火力对准文贵先生，对准爆料革命呢？这不仅令他们颜面扫地，更是砸掉了他们赖以生存的饭碗。
+目前约有 110 万学生就读于维多利亚州的学校。
 
-文贵先生是第一个告诉那些想要中国获得民主、法治、自由的人们：一群成年累月靠要饭谋生的人，怎么可能给中国人民自由与法治呢？这是一群没有丝毫生存能力的寄生虫，除了口炮一无是处。当初真正的八九六四的英雄都已死在天安门广场枪林弹雨中，当天活下来的学生也死在中共的监狱里，比如清风看守所里关押的那些人。
+尽管感染人数激增，但没有学校关闭，接触者追踪旨在保持教室开放。
 
-这也就很好地解释了一个多年缠绕在中国人心头的问题，为什么这些欺民贼在海外三十多年，他们越反共，而中共越强大？因为他们本就是党的人啊！但是很多海外及国内的民众都相信这些欺民贼是真正的反共人士。吴建民、李一平曾提出的所谓的“全民共振”，国内很多民众参加了他们的电报群、微信群，结果这些人全部都被喝茶。
+马特森女士说，随着人们在社区内活动的增加，该部门预计病例数将保持在目前的水平。
 
-吴建民、盛雪等都有自己的微信群，可以大谈反共，不被封号，还能获得粉丝打赏，而吴健民的旅游公司竟然可以和国内旅行社对接。你说他们不是党的大外宣又是什么？普通人若在微信群里谈到爆料革命，马上封号、喝茶，甚至拘留、判刑。
+快速抗原检测（RAT）的检测结果并不准确，而且还有很多人选择不做检测。所以真实准确的确诊数字一定数倍于官方报道的数据，政府预计病例数能够保持在目前的水平完全是自欺欺人。这是一个特殊时期，建议各位家长让自己的孩子呆在家中自主学习，千万不要去学校，一旦孩子不慎感染则悔之晚矣！
 
-文贵先生开始一个人的爆料革命，欺民贼认为他不过是第二个赖昌兴，于是就有了夏业良要七哥用十亿美元组建海豹突击队，去袭击中南坑。当时很多民众为此鼓掌叫好，然而我们并不知道，中共作为中国的合法政府，假如采用这个方法，七哥马上变成一名恐怖份子，会被遣送回国。
+参考链接：
 
-他们多次挖坑希望七哥碰触西方的法律红线，成为刑事犯。文贵先生与欺民贼们斗智斗勇的时候，也是我们学习西方法治、民主的时候，在学习中我 们不断成长、蜕变，学会明辨真假、识别善恶。你们相信吗？本来号称反共的海外民运？此时枪口一致对准重创中共的文贵先生，他成了海外民运的头号敌人，是不是让人感到难以理解呢？
-
-七哥的逆向思维告诉我们，口炮是灭不了中共的，要消灭中共必须靠强大的实力与行动！行动！
-
-我很庆幸自己在2017年就加入了这场爆料革命，见证了这场风起云涌、史无前例、空前绝后的以法灭共、以美灭共、以钱灭共、以共灭共的爆料革命！从他一个人的爆料开始，到海内外无数战友聚集在他身边，再到创立了新中国联邦。他以天才般的创意设计出G系列，首先让我们这些穷战友变得有钱，让新中国联邦变得有实力，然后他利用自己多年积累的人脉与信用，与世界各国政要、经济、军事、金融全方位的进行合作，让美国政府率先外交撤离中共国。
-
-这是永久性撤离，随后已有五十多个国家准备跟进，永久撤离外交人员，意味着中共执政合法性的不复存在，中共的灭亡进入了倒计时。
-
-这就是文贵先生半月前所说的“甜蜜蜜运动”，没有流血、没有牺牲、没有暴力。
-
-今天是冬奥会第三天，一切按照文贵先生编写的剧本在上演：230万枚催雪弹果然没有发射，北京、河北地区万里无云。本来预计有九十九个国家领导人出席冬奥会，可惜只来了三十三个国家，最重量级的普京大帝，随行人员入住中共宾馆当天有十六人感染病毒，三人突然暴毙。他仅呆了九个小时就愤然回国。
-
-在冬奥开幕式上习神步履蹒跚，神情疲惫焦虑，整个人都脱了相。据说因为开幕前的几分钟负责保安的重要成员当场“祭旗”，此乃大凶之兆。尽管冬奥开幕式上灯光、摄影、舞蹈美伦美换，却虎头蛇尾，仅有一百分钟就匆匆忙忙地结束，开创了奥运会此项记录。
-
-看台上你看不到各国领导人的身影、观众席上冷冷清清，鬼影重重，真正办成了文贵先生所说的“冬眠会”。这就是新中国联邦的硬实力，重创了中共国万国来朝的美梦，把它变成了中共的恶梦，变成中共在历史舞台上最后的落幕式。
-
-现在随着喜币hpay的全面上线，在金融上实行对中共国的隔空取钱，将共产党插在百姓身上的血管反插在中共的身体里，随着中共国失血过多，最终导致它金融崩盘。那时就是共产党灭亡之时！
-
-文贵先生三十年的卧薪尝胆，五年的艰苦卓绝的努力，共产党灭亡的时刻已进入了倒计时。
-
-此时，你是否明白海外欺民贼为什么三十多年一事无成的原因了吧？
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E6%BE%B3%E5%96%9C%E5%9B%BE%E6%A0%872-1.jpg)
+[https://www.abc.net.au/news/2022-02-05/victoria-records-new-covid-cases-deaths-and-hospitalisations/100807284](https://www.abc.net.au/news/2022-02-05/victoria-records-new-covid-cases-deaths-and-hospitalisations/100807284)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
